force-app/main/default/objects/User_Credential__c/User_Credential__c.object-meta.xml
<CustomObject>
    <label>User Credential</label>
    <nameField>
        <displayFormat>CRED-{00000}</displayFormat>
        <label>User Credential ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Credentials</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>