force-app/main/default/objects/User_Credential__c/fields/Badge_Icon__c.field-meta.xml
<CustomField>
    <fullName>Badge_Icon__c</fullName>
    <formula>Credential__r.Badge_Icon__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Badge Icon</label>
    <type>Text</type>
</CustomField>