force-app/main/default/objects/User_Credential__c/fields/Credential__c.field-meta.xml
<CustomField>
    <fullName>Credential__c</fullName>
    <label>Credential</label>
    <referenceTo>Credential__c</referenceTo>
    <relationshipLabel>User Credentials</relationshipLabel>
    <relationshipName>User_Credentials</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>