force-app/main/default/objects/User_Credential__c/fields/Exam_Attempt_Count__c.field-meta.xml
<CustomField>
    <fullName>Exam_Attempt_Count__c</fullName>
    <label>Exam Attempt Count</label>
    <summaryForeignKey>Credential_Exam_Attempt__c.User_Credential__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>