force-app/main/default/objects/User_Credential__c/fields/Last_Partner_Portal_Sync_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Partner_Portal_Sync_Date_Time__c</fullName>
    <label>Last Partner Portal Sync Date Time</label>
    <type>DateTime</type>
</CustomField>