force-app/main/default/objects/User_Credential__c/fields/Maintenance_Due__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Due__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Maintenance Due</label>
    <type>Checkbox</type>
</CustomField>