force-app/main/default/objects/User_Credential__c/fields/Synced_from_Partner_Portal__c.field-meta.xml
<CustomField>
    <fullName>Synced_from_Partner_Portal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the certification was found during the latest sync from the partner portal</description>
    <inlineHelpText>Indicates that the certification was found during the latest sync from the partner portal</inlineHelpText>
    <label>Synced from Partner Portal</label>
    <type>Checkbox</type>
</CustomField>