force-app/main/default/objects/User_Credential__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <formula>Credential__r.URL__c</formula>
    <label>URL</label>
    <type>Text</type>
</CustomField>