force-app/main/default/objects/User_Credential__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Credential__c</columns>
    <columns>Assigned_By__c</columns>
    <columns>Assigned_Date__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>